[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twxtools"
version = "0.1.0"
authors = [{name = "Aram Danielyan"}]
description = "Interactive image and video sequence viewer"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
]
