[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twxtools"
version = "0.1.0"
authors = [{name = "Aram Danielyan"}]
description = "Interactive image and video sequence viewer"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["image", "video", "viewer", "matplotlib", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Graphics :: Viewers",
]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/aram-danielyan/twx"
Repository = "https://github.com/aram-danielyan/twx"
"Bug Tracker" = "https://github.com/aram-danielyan/twx/issues"
